# system-monitor-improved

./: .gitignore  LICENSE  README.md  extension.js  meson.build  metadata.json.in  proccessRun.js  stylesheet.css
schemas/: org.gnome.shell.extensions.system-monitor-improved.gschema.xml
